stop footer from wrapping in desktop size

--- a/Youssef/Code/style_abada.css
+++ b/Youssef/Code/style_abada.css
@@ -152,7 +152,7 @@ h1.page-title {
 
 .footer .row {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
 }
 
